# LocalChatCPP

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: static.yml
LocalChat/: CMakeLists.txt  LocalChat.cpp  LocalChat.h
LocalChat/LCClient/: CMakeLists.txt  LCClient.cpp  LCClientMain.cpp
LocalChat/LCClient/include/LCClient/: LCClient.h
LocalChat/LCClient/include/LCClient/Application/: Application.h
LocalChat/LCClient/include/LCClient/Audio/: AudioAlert.h  AudioManager.h
LocalChat/LCClient/include/LCClient/UI/: Chat.h  ConversationList.h  FontManager.h  MessageBlob.h  TextureLoader.h  TextureType.h  UIElement.h
LocalChat/LCClient/src/LCClient/: LCClient.cpp
LocalChat/LCClient/src/LCClient/Application/: Application.cpp
LocalChat/LCClient/src/LCClient/Audio/: AudioManager.cpp
LocalChat/LCClient/src/LCClient/UI/: Chat.cpp  ConversationList.cpp  FontManager.cpp  MessageBlob.cpp  TextureLoader.cpp
LocalChat/LCServer/: CMakeLists.txt  LCServLauncher.cpp
LocalChat/LCServer/include/LCServer/: ClientApp.h  LCServer.h
LocalChat/LCServer/src/LCServer/: ClientApp.cpp  LCServer.cpp
LocalChat/core/Events/: Event.h  EventCallbacks.h  EventManager.h  EventName.h
LocalChat/core/Message/: ControlMessage.cpp  ControlMessage.h  ControlMessageTypes.h  Message.cpp  Message.h  MessageType.h  TextMessage.cpp  TextMessage.h
LocalChat/core/Serializable/: Serializable.h
LocalChat/core/utils/: Conversion.h  SerializationUtils.h
LocalChat/src/: Conversion.cpp  SerializationUtils.cpp
Networking/: CMakeLists.txt
Networking/include/Networking/: CharSocketStream.h  Networking.h  ServerSocket.h  Socket.h  WCharSocketStream.h
Networking/src/: CharSocketStream.cpp  EntryPoint.cpp  ServerSocket.cpp  Socket.cpp  WCharSocketStream.cpp
docs/html/: 3_824_8202208181-_m_s_v_c__2_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_824_8202208181-_m_s_v_c__2_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_824_8202208181-_m_s_v_c__2_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  3_824_8202208181-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_824_8202208181-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  3_824_8202208181-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  3_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  3_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  3_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _application_8cpp.html  _application_8cpp.js  _application_8cpp__incl.map  _application_8cpp__incl.md5  _application_8cpp_source.html  _application_8h.html  _application_8h.js  _application_8h__dep__incl.map  _application_8h__dep__incl.md5  _application_8h__incl.map  _application_8h__incl.md5  _application_8h_source.html  _audio_alert_8h.html  _audio_alert_8h.js  _audio_alert_8h__dep__incl.map  _audio_alert_8h__dep__incl.md5  _audio_alert_8h_source.html  _audio_manager_8cpp.html  _audio_manager_8cpp__incl.map  _audio_manager_8cpp__incl.md5  _audio_manager_8cpp_source.html  _audio_manager_8h.html  _audio_manager_8h.js  _audio_manager_8h__dep__incl.map  _audio_manager_8h__dep__incl.md5  _audio_manager_8h__incl.map  _audio_manager_8h__incl.md5  _audio_manager_8h_source.html  (+635 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+55 more)
